updates from github

--- a/myWeb.html
+++ b/myWeb.html
@@ -12,6 +12,7 @@
  this is skye at 4.45pm
  <p>this is skye again at 5.08pm</p>
  <p>this is something from my local laptop</p>
+ <p>hello from github</p>
 </body>
 
 </html>
